# src/openapi/openapi.json
@@ -8,6 +8,173 @@
     }
   ],
   "paths": {
+    "/tutor/courses/{id}": {
+      "get": {
+        "tags": ["tutor-course-admin-controller"],
+        "operationId": "get",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/CoursePublicDTO" }
+              }
+            }
+          }
+        }
+      },
+      "put": {
+        "tags": ["tutor-course-admin-controller"],
+        "operationId": "update",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/CourseDTO" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/CoursePublicDTO" }
+              }
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": ["tutor-course-admin-controller"],
+        "operationId": "delete",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "responses": { "200": { "description": "OK" } }
+      }
+    },
+    "/student/courses/{studentCourseId}": {
+      "put": {
+        "tags": ["student-course-admin"],
+        "operationId": "review",
+        "parameters": [
+          {
+            "name": "studentCourseId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/StudentReviewDTO" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/StudentCourseDTO" }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/tutor/courses": {
+      "get": {
+        "tags": ["tutor-course-admin-controller"],
+        "operationId": "paginate",
+        "parameters": [
+          {
+            "name": "pageable",
+            "in": "query",
+            "required": true,
+            "schema": { "$ref": "#/components/schemas/Pageable" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/PageCoursePublicDTO" }
+              }
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": ["tutor-course-admin-controller"],
+        "operationId": "create",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": { "$ref": "#/components/schemas/CourseDTO" }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "*/*": { "schema": { "$ref": "#/components/schemas/Course" } }
+            }
+          }
+        }
+      }
+    },
+    "/student/courses/enroll/{courseId}": {
+      "post": {
+        "tags": ["student-course-admin"],
+        "operationId": "enroll",
+        "parameters": [
+          {
+            "name": "courseId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/StudentCourseDTO" }
+              }
+            }
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "tags": ["Authentication"],
@@ -67,7 +234,26 @@
               "*/*": {
                 "schema": {
                   "type": "array",
-                  "items": { "$ref": "#/components/schemas/Course" }
+                  "items": { "$ref": "#/components/schemas/CoursePublicDTO" }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/student/courses/list": {
+      "get": {
+        "tags": ["student-course-admin"],
+        "operationId": "list_1",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": { "$ref": "#/components/schemas/StudentCourseDTO" }
                 }
               }
             }
@@ -78,7 +264,7 @@
     "/courses": {
       "get": {
         "tags": ["course-controller"],
-        "operationId": "paginate",
+        "operationId": "paginate_1",
         "parameters": [
           {
             "name": "pageable",
@@ -91,20 +277,46 @@
           "200": {
             "description": "OK",
             "content": {
-              "*/*": { "schema": { "$ref": "#/components/schemas/PageCourse" } }
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/PageCoursePublicDTO" }
+              }
             }
           }
         }
       }
     },
-    "/courses/{name}": {
+    "/courses/{courseId}": {
       "get": {
         "tags": ["course-controller"],
-        "operationId": "get",
+        "operationId": "getCourse",
+        "parameters": [
+          {
+            "name": "courseId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": { "$ref": "#/components/schemas/CoursePublicDTO" }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/courses/search": {
+      "get": {
+        "tags": ["course-controller"],
+        "operationId": "getCoursesById",
         "parameters": [
           {
             "name": "name",
-            "in": "path",
+            "in": "query",
             "required": true,
             "schema": { "type": "string" }
           }
@@ -113,7 +325,12 @@
           "200": {
             "description": "OK",
             "content": {
-              "*/*": { "schema": { "$ref": "#/components/schemas/Course" } }
+              "*/*": {
+                "schema": {
+                  "type": "array",
+                  "items": { "$ref": "#/components/schemas/CoursePublicDTO" }
+                }
+              }
             }
           }
         }
@@ -130,7 +347,7 @@
               "*/*": {
                 "schema": {
                   "type": "array",
-                  "items": { "$ref": "#/components/schemas/Course" }
+                  "items": { "$ref": "#/components/schemas/CoursePublicDTO" }
                 }
               }
             }
@@ -152,10 +369,203 @@
         ],
         "responses": { "200": { "description": "OK" } }
       }
+    },
+    "/student/courses/leave/{courseId}": {
+      "delete": {
+        "tags": ["student-course-admin"],
+        "operationId": "leave",
+        "parameters": [
+          {
+            "name": "courseId",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "integer", "format": "int32" }
+          }
+        ],
+        "responses": { "200": { "description": "OK" } }
+      }
     }
   },
   "components": {
     "schemas": {
+      "CourseDTO": {
+        "required": ["coverPath", "description", "name"],
+        "type": "object",
+        "properties": {
+          "name": { "maxLength": 250, "minLength": 3, "type": "string" },
+          "description": { "type": "string" },
+          "coverPath": { "type": "string" },
+          "techStack": { "type": "array", "items": { "type": "string" } },
+          "level": {
+            "type": "string",
+            "enum": ["ENTRY", "INTERMEDIATE", "ADVANCE"]
+          }
+        }
+      },
+      "Course": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "tutorId": { "$ref": "#/components/schemas/Tutor" },
+          "name": { "type": "string" },
+          "isActive": { "type": "boolean" },
+          "description": { "type": "string" },
+          "createdDate": { "type": "string", "format": "date-time" },
+          "coverPath": { "type": "string" },
+          "techStacks": {
+            "uniqueItems": true,
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/TechStack" }
+          },
+          "enrollments": {
+            "uniqueItems": true,
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/StudentCourse" }
+          },
+          "level": {
+            "type": "string",
+            "enum": ["ENTRY", "INTERMEDIATE", "ADVANCE"]
+          },
+          "updatedDate": { "type": "string", "format": "date-time" }
+        }
+      },
+      "CoursePublicDTO": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "name": { "type": "string" },
+          "description": { "type": "string" },
+          "coverPath": { "type": "string" },
+          "techStack": {
+            "uniqueItems": true,
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/TechStack" }
+          },
+          "level": {
+            "type": "string",
+            "enum": ["ENTRY", "INTERMEDIATE", "ADVANCE"]
+          },
+          "tutor": { "$ref": "#/components/schemas/TutorProfilePublic" },
+          "createdDate": { "type": "string", "format": "date-time" },
+          "studentReview": { "type": "array", "items": { "type": "string" } },
+          "studentStars": { "type": "integer", "format": "int32" }
+        }
+      },
+      "GrantedAuthority": {
+        "type": "object",
+        "properties": { "authority": { "type": "string" } }
+      },
+      "Student": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "username": { "type": "string" },
+          "password": { "type": "string" },
+          "lastSession": { "type": "string", "format": "date-time" },
+          "firstName": { "type": "string" },
+          "lastName": { "type": "string" },
+          "dateOfBirth": { "type": "string", "format": "date" },
+          "gender": { "type": "string" },
+          "email": { "type": "string" },
+          "address": { "type": "string" },
+          "description": { "type": "string" },
+          "photoRoute": { "type": "string" },
+          "enrollments": {
+            "uniqueItems": true,
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/StudentCourse" }
+          },
+          "fullName": { "type": "string" },
+          "name": { "type": "string" },
+          "enabled": { "type": "boolean" },
+          "accountLocked": { "type": "boolean" },
+          "authorities": {
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/GrantedAuthority" }
+          },
+          "credentialsNonExpired": { "type": "boolean" },
+          "accountNonExpired": { "type": "boolean" },
+          "accountNonLocked": { "type": "boolean" }
+        }
+      },
+      "StudentCourse": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "course": { "$ref": "#/components/schemas/Course" },
+          "student": { "$ref": "#/components/schemas/Student" },
+          "studentActive": { "type": "boolean" },
+          "studentJoinDate": { "type": "string", "format": "date-time" },
+          "studentReview": { "type": "string" },
+          "studentStars": { "type": "integer", "format": "int32" }
+        }
+      },
+      "TechStack": {
+        "type": "object",
+        "properties": {
+          "techStack": { "type": "string" },
+          "course": {
+            "uniqueItems": true,
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/Course" }
+          }
+        }
+      },
+      "Tutor": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "username": { "type": "string" },
+          "password": { "type": "string" },
+          "lastSession": { "type": "string", "format": "date-time" },
+          "firstName": { "type": "string" },
+          "lastName": { "type": "string" },
+          "dateOfBirth": { "type": "string", "format": "date" },
+          "gender": { "type": "string" },
+          "email": { "type": "string" },
+          "address": { "type": "string" },
+          "description": { "type": "string" },
+          "photoRoute": { "type": "string" },
+          "fullName": { "type": "string" },
+          "name": { "type": "string" },
+          "enabled": { "type": "boolean" },
+          "accountLocked": { "type": "boolean" },
+          "authorities": {
+            "type": "array",
+            "items": { "$ref": "#/components/schemas/GrantedAuthority" }
+          },
+          "credentialsNonExpired": { "type": "boolean" },
+          "accountNonExpired": { "type": "boolean" },
+          "accountNonLocked": { "type": "boolean" }
+        }
+      },
+      "TutorProfilePublic": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "username": { "type": "string" },
+          "photoRoute": { "type": "string" }
+        }
+      },
+      "StudentReviewDTO": {
+        "type": "object",
+        "properties": {
+          "studentReview": { "type": "string" },
+          "studentStars": { "type": "integer", "format": "int32" }
+        }
+      },
+      "StudentCourseDTO": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int32" },
+          "studentId": { "type": "integer", "format": "int32" },
+          "studentActive": { "type": "boolean" },
+          "studentReview": { "type": "string" },
+          "studentStars": { "type": "integer", "format": "int32" },
+          "studentJoinDate": { "type": "string", "format": "date-time" },
+          "courseEnrolled": { "$ref": "#/components/schemas/CoursePublicDTO" }
+        }
+      },
       "RequestUserClientDTO": {
         "required": [
           "address",
@@ -198,63 +608,16 @@
       },
       "AuthenticationResponse": {
         "type": "object",
-        "properties": { "token": { "type": "string" } }
-      },
-      "Course": {
-        "type": "object",
         "properties": {
-          "id": { "type": "integer", "format": "int32" },
-          "tutor": { "$ref": "#/components/schemas/Tutor" },
-          "name": { "type": "string" },
-          "isActive": { "type": "boolean" },
-          "description": { "type": "string" },
-          "createdDate": { "type": "string", "format": "date-time" },
-          "coverPath": { "type": "string" },
-          "techStack": {
-            "type": "array",
-            "items": { "$ref": "#/components/schemas/TechStack" }
-          },
-          "level": {
-            "type": "string",
-            "enum": ["ENTRY", "INTERMEDIATE", "ADVANCE"]
-          },
-          "updatedDate": { "type": "string", "format": "date-time" }
+          "token": { "type": "string" },
+          "user": { "$ref": "#/components/schemas/UserProfileDTO" }
         }
       },
-      "GrantedAuthority": {
-        "type": "object",
-        "properties": { "authority": { "type": "string" } }
-      },
-      "TechStack": {
-        "type": "object",
-        "properties": { "techStack": { "type": "string" } }
-      },
-      "Tutor": {
+      "UserProfileDTO": {
         "type": "object",
         "properties": {
-          "id": { "type": "integer", "format": "int32" },
-          "username": { "type": "string" },
-          "password": { "type": "string" },
-          "lastSession": { "type": "string", "format": "date-time" },
-          "firstName": { "type": "string" },
-          "lastName": { "type": "string" },
-          "dateOfBirth": { "type": "string", "format": "date" },
-          "gender": { "type": "string" },
-          "email": { "type": "string" },
-          "address": { "type": "string" },
-          "description": { "type": "string" },
-          "photoRoute": { "type": "string" },
-          "fullName": { "type": "string" },
-          "name": { "type": "string" },
-          "enabled": { "type": "boolean" },
-          "accountLocked": { "type": "boolean" },
-          "authorities": {
-            "type": "array",
-            "items": { "$ref": "#/components/schemas/GrantedAuthority" }
-          },
-          "credentialsNonExpired": { "type": "boolean" },
-          "accountNonExpired": { "type": "boolean" },
-          "accountNonLocked": { "type": "boolean" }
+          "userName": { "type": "string" },
+          "role": { "type": "string" }
         }
       },
       "Pageable": {
@@ -265,22 +628,22 @@
           "sort": { "type": "array", "items": { "type": "string" } }
         }
       },
-      "PageCourse": {
+      "PageCoursePublicDTO": {
         "type": "object",
         "properties": {
-          "totalPages": { "type": "integer", "format": "int32" },
           "totalElements": { "type": "integer", "format": "int64" },
+          "totalPages": { "type": "integer", "format": "int32" },
           "size": { "type": "integer", "format": "int32" },
           "content": {
             "type": "array",
-            "items": { "$ref": "#/components/schemas/Course" }
+            "items": { "$ref": "#/components/schemas/CoursePublicDTO" }
           },
           "number": { "type": "integer", "format": "int32" },
           "sort": { "$ref": "#/components/schemas/SortObject" },
           "first": { "type": "boolean" },
           "last": { "type": "boolean" },
-          "pageable": { "$ref": "#/components/schemas/PageableObject" },
           "numberOfElements": { "type": "integer", "format": "int32" },
+          "pageable": { "$ref": "#/components/schemas/PageableObject" },
           "empty": { "type": "boolean" }
         }
       },
